Fix z-index on Firefox 132.0b2

--- a/chrome/tweaks/collapse-sidebery.css
+++ b/chrome/tweaks/collapse-sidebery.css
@@ -8,7 +8,7 @@
       min-width: var(--uc-sidebar-collapsed-width) !important;
       width: var(--uc-sidebar-collapsed-width) !important;
       max-width: var(--uc-sidebar-width) !important;
-      z-index:1;
+      z-index: calc(var(--browser-area-z-index-tabbox, 0) + 1) !important;
     }
 
     & #sidebar-box[positionend] {
